Fixup the API def

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
         "jane-php/open-api-runtime": "^5.0"
     },
     "require-dev": {
-        "jane-php/open-api": "^5.0"
+        "jane-php/open-api": "^5.0",
+        "symfony/var-dumper": "^5.0",
+        "symfony/http-client": "^5.0",
+        "zendframework/zend-diactoros": "^2.2"
     },
     "license": "MIT",
     "authors": [
@@ -14,5 +17,10 @@
             "name": "David Hollis",
             "email": "dhollis@davehollis.com"
         }
-    ]
+    ],
+    "autoload" : {
+        "psr-4" : {
+            "Tesla\\": "src/"
+        }
+    }
 }
